<resources>
    <string name="app_name">CameraXDemo</string>
    <string name="title_Preview">Preview</string>
    <string name="title_Capture">Capture</string>
    <string name="title_Analysis">Analysis</string>
    <string name="button_capture">Capture</string>
    <string name="switch_flash_on">Flash on</string>
    <string name="switch_flash_off">Flash off</string>
    <string name="switch_lens">Lens</string>
    <string name="switch_lens_off">Back</string>
    <string name="switch_lens_on">Front</string>
    <string name="switch_analyzer">Analyzer ON/OFF</string>
    <string name="gallery_button">gallery</string>

    <string name="introTitle">CameraX Demo App</string>
    <string name="title_activity_intro">CameraX Demo App</string>
    <string name="introSecondTitle">created by Patrick Marty</string>
    <string name="title_activity_intro_title">MOBLAB HS19 sa15 CameraX</string>
</resources>